[package]
name = "remote-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.23.0"
tokio = { version = "1.34.0", features = ["full", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.75"
rodio = { version = "0.17.3", features = [
  "symphonia-all",
], default-features = false }
clap = { version = "4.4.8", features = ["derive"] }
